[package]
name = "export-setup-parameters"
version = "0.1.0"
authors = ["Neo Sun <neosun256@gmail.com>"]
edition = "2021"
description = "Export ark setup parameters from zcash"

[dependencies]
ark-bls12-381 = { version = '0.4.0-alpha', default-features = false, features = ["curve"] }
ark-ec = { version = '0.4.0-alpha', default-features = false }
ark-ff = { version = '0.4.0-alpha', default-features = false, features = [ "asm" ]  }
ark-std = { version = '0.4.0-alpha', default-features = false }
ark-serialize = { version = '0.4.0-alpha', default-features = false }

num-bigint = "0.4"
text_io = "0.1.9"
rand = "0.8"
rayon = { version = "1", optional = true }

bincode = "1"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std", "parallel"]
std = []
parallel = ["ark-ec/parallel", "ark-ff/parallel", "rayon"]

[patch.crates-io]
ark-ec = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4-fix-field-test" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4-fix-field-test" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", branch = "release-0.4-fix-field-test" }
ark-std = { git = "https://github.com/arkworks-rs/std", branch = "release-0.4" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
